--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Weekend Challenge 2</title>
+    <title>Jeff Kealy Weekend Challenge 2</title>
 
     <link rel="stylesheet" href="/styles/style.css" />
 
@@ -10,6 +10,11 @@
 
   </head>
   <body>
-    <h1>Weekend Challenge 2</h1>
+    <h1>Shoutoutz!</h1>
+    <div id="objectElements"></div>
+    <div id="index">
+    <button id="nextButton" type="Button" name="Next">Next</button>
+    <button id="prevButton" type="Button" name="Previous">Previous</button>
+    </div>
   </body>
 </html>
