before leaving friday

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,9 +12,14 @@
   <body>
     <h1>Shoutoutz!</h1>
     <div id="objectElements"></div>
-    <div id="index">
+    <div id="buttons">
     <button id="nextButton" type="Button" name="Next">Next</button>
     <button id="prevButton" type="Button" name="Previous">Previous</button>
+    </div>
+    <div id="index">
+
+    </div>
+
     </div>
   </body>
 </html>
