--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,5 +1,11 @@
+button{
+  font-size: 20px;
+  margin: 5px;
+  border-radius: 20%;
+  background-color: lightgrey;
+}
 .blocks{
-  background-color: red;
+
   width: 50px;
   height: 50px;
   float: left;
@@ -8,4 +14,7 @@
   width: 50px;
   height: 50px;
   float: left;
+}
+#objectElements{
+  height: 300px;
 }
