--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,14 +1,20 @@
+body{
+  background-image: url("http://www.planwallpaper.com/static/images/739916-awesome-background-images.jpg");
+}
+
 button{
   font-size: 20px;
   margin: 5px;
   border-radius: 20%;
   background-color: lightgrey;
+  
+
 }
 .blocks{
-
   width: 50px;
   height: 50px;
   float: left;
+  border-radius: 10%;
 }
 .blockOutline{
   width: 50px;
@@ -16,5 +22,10 @@ button{
   float: left;
 }
 #objectElements{
-  height: 300px;
+  height: 150px;
+  text-align: center;
+}
+#index{
+  display: block;
+  margin: 0 auto;
 }
